--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
-    <head><title>Simple hello world</title></head>
+    <head><title>CPU leaderlogs</title></head>
     <body>
-    <h1>Hello Node JS</h1>
+        <style>
+            .imgPool{
+                margin-bottom: 24px;
+            }
+        </style>
+    <h1>Leaderlogs</h1>
+    <div>
+        <img class="imgPool" />
+    </div>
+    <script>
+        document.querySelectorAll(".imgPool").forEach((el)=>{el.src ="./imageVENUS.png"})
+    </script>
     </body>
     </html>
