Commit cpu integration

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
         </style>
     <h1>Leaderlogs</h1>
     <div>
-        <img class="imgPool" />
+        <img class="imgPoolVENUS" />
+        <img class="imgPoolCPU" />
+        <img class="imgPoolERA" />
+        <img class="imgPoolMINES" />
     </div>
     <script>
-        document.querySelectorAll(".imgPool").forEach((el)=>{el.src ="./imageVENUS.png"})
+        document.querySelector(".imgPoolVENUS").el.src ="./imageVENUS.png"
+        document.querySelector(".imgPoolCPU").el.src ="./imageCPU.png"
+        document.querySelector(".imgPoolERA").el.src ="./imageERA.png"
+        document.querySelector(".imgPoolMINES").el.src ="./imageMINES.png"
     </script>
     </body>
     </html>
