--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <img class="imgPoolMINES" />
     </div>
     <script>
-        document.querySelector(".imgPoolVENUS").el.src ="./imageVENUS.png"
-        document.querySelector(".imgPoolCPU").el.src ="./imageCPU.png"
+        document.querySelector(".imgPoolVENUS").src ="./imageVENUS.png"
+        document.querySelector(".imgPoolCPU").src ="./imageCPU.png"
         document.querySelector(".imgPoolERA").el.src ="./imageERA.png"
-        document.querySelector(".imgPoolMINES").el.src ="./imageMINES.png"
+        document.querySelector(".imgPoolMINES").src ="./imageMINES.png"
     </script>
     </body>
     </html>
