--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
         document.querySelector(".imgPoolVENUS").src ="./imageVENUS.png"
         document.querySelector(".imgPoolCPU").src ="./imageCPU.png"
-        document.querySelector(".imgPoolERA").el.src ="./imageERA.png"
+        document.querySelector(".imgPoolERA").src ="./imageERA.png"
         document.querySelector(".imgPoolMINES").src ="./imageMINES.png"
     </script>
     </body>
