--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="imgPool" />
     </div>
     <script>
-        document.querySelectorAll(".imgPool").forEach((el)=>{el.src ="./imageVENUS.png"})
+        document.querySelector(".imgPool").src ="./imageVENUS.png"
     </script>
     </body>
     </html>
